<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="channel_name">Nayan</string>
    <string name="channel_description">Nayan</string>
    <string name="logout">Log Out</string>
    <string name="c3_specialist">C3-Specialist</string>
    <string name="facebook_app_id" translatable="false">1144232629541807</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1144232629541807</string>
    <string name="facebook_client_token" translatable="false">41d6f64b59a8f108706c257252a04d76</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="specialist">Specialist</string>
    <string name="manager">Manager</string>
    <string name="developer">Developer</string>
    <string name="admin">Admin</string>
    <string name="driver">Driver</string>
    <string name="my_account">My Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="kyc">KYC</string>
    <string name="my_language">My Language</string>
    <string name="start_work">Start Work</string>
    <string name="find_help">Find Help</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="ai">AI</string>
    <string name="tap">Tap</string>
    <string name="vol">Vol</string>
    <string name="ndv">NDV</string>
    <string name="work_summary">Work Summary</string>
    <string name="driver_setting">Driver Settings</string>
    <string name="my_performance">My Performance</string>
    <string name="home_screen_message">Hi! %s\nLet\'s start earning!</string>
    <string name="driver_home_screen_message">Hi! %s\nLet\'s start driving!</string>
    <string name="delp_home_screen_message">Hi! %s\nLet\'s start capturing!</string>
    <string name="home_screen_message_developer">Hi! %s\nCheck your action items!</string>
    <string name="total_hours_worked">Total hours worked</string>
    <string name="today_s_stats">Today\'s Stats</string>
    <string name="english">English</string>
    <string name="bank_account_info">Bank Account Info</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="more_sources">More Sources</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_address">Your address</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="your_state">Your state</string>
    <string name="your_country">Your country</string>
    <string name="your_gender">Your gender</string>
    <string name="full_name">Full name</string>
    <string name="add_address">Add Address</string>
    <string name="selectState">Select State</string>
    <string name="selectCountry">Select Country</string>
    <string name="name_cant_be_blank">Name can\'t be blank.</string>
    <string name="address_cant_be_blank">Address can\'t be blank.</string>
    <string name="city_cant_be_blank">City can\'t be blank.</string>
    <string name="state_cant_be_blank">Select state first.</string>
    <string name="country_cant_be_blank">Country state first.</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="beneficiary_account_number">Beneficiary Account Number</string>
    <string name="bank_ifsc_code">Bank IFSC Code</string>
    <string name="bank_information">Bank Information</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="city">City</string>
    <string name="invalid_ifsc_code">Invalid IFSC code.</string>
    <string name="beneficiary_name_cant_be_blank">Beneficiary name can\'t be blank</string>
    <string name="beneficiary_account_number_cant_be_blank">Beneficiary account number can\'t be blank</string>
    <string name="select_language">Select Language</string>
    <string name="hindi">हिन्दी</string>
    <string name="kyc_status">KYC Status</string>
    <string name="add_pan_details">Add PAN details</string>
    <string name="pan_text">PAN: %s</string>
    <string name="add_photo_id_details">Add your Photo ID</string>
    <string name="select_photo_id">Select Photo ID</string>
    <string name="photo_id_text">ID Number: %s</string>
    <string name="pan_number">PAN Number</string>
    <string name="pick_image">Pick Image</string>
    <string name="upload_pan_image_here">Upload PAN image here</string>
    <string name="pan_image">PAN Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_denied">%s permission is denied</string>
    <string name="permission_denied_permanently">Permission is denied permanently.You can grant them in App Settings.</string>
    <string name="pan_details">PAN Details</string>
    <string name="error_occured">Error occurred! %s</string>
    <string name="alert">Alert!</string>
    <string name="go_to_settings">Goto Settings</string>
    <string name="pan_number_cant_be_blank">PAN number can\'t be blank.</string>
    <string name="invalid_pan_number">Invalid PAN number.</string>
    <string name="update_photoid_image_first">Update %s image first.</string>
    <string name="update_pan_image_first">Update PAN image first.</string>
    <string name="id_number">ID Number</string>
    <string name="upload_photo_id_here">Upload Photo ID here</string>
    <string name="photo_id_details">Photo ID details</string>
    <string name="id_type_cant_be_blank">ID Type can\'t be blank.</string>
    <string name="id_number_cant_be_blank">ID number can\'t be blank.</string>
    <string name="update_id_image_first">Update Photo ID image first.</string>
    <string name="transactions">Transactions</string>
    <string name="default_money">₹ 0</string>
    <string name="amount_earned">Amount Earned</string>
    <string name="recorded_videos">Videos Uploaded</string>
    <string name="default_points_earned">0.00 Points Earned</string>
    <string name="checkout">Checkout</string>
    <string name="bonus">Bonus</string>
    <string name="filters">Filters</string>
    <string name="transaction_points">%s Points</string>
    <string name="last_updated_on">Last updated %s</string>
    <string name="no_transaction_found">No Transaction Found</string>
    <string name="no_referral_found">No Referral Found</string>
    <string name="checkout_status">Checkout Status</string>
    <string name="date">Date</string>
    <string name="potential_points">Potential Points</string>
    <string name="approved_potential_points">Approved Potential Points</string>
    <string name="earned_points">Earned Points</string>
    <string name="penalty_points">Penalty Points</string>
    <string name="no_errors_to_show">No errors to show</string>
    <string name="clear">Clear</string>
    <string name="status">Status</string>
    <string name="created">Created</string>
    <string name="initiated">Initiated</string>
    <string name="processed">Processed</string>
    <string name="failed">Failed</string>
    <string name="apply">Apply</string>
    <string name="enter_password">Enter Password</string>
    <string name="incorrect_password_message">Password can\'t be blank.</string>
    <string name="authenticate_to_edit_bank_details">Authenticate to edit Bank Details</string>
    <string name="update_message">%s is updated successfully.</string>
    <string name="not_uploaded">Not Uploaded</string>
    <string name="rejected">Rejected</string>
    <string name="pending_verification">Pending Verification</string>
    <string name="verified">Verified</string>
    <string name="no_pending_work">No pending work.</string>
    <string name="unauthorized_error_message">You need to sign in or sign up before continuing.</string>
    <string name="stats">Stats</string>
    <string name="annotation_count">Annotated Records</string>
    <string name="judgment_count">Validated Records</string>
    <string name="specialist_wallet">Specialist Wallet</string>
    <string name="manager_wallet">Manager Wallet</string>
    <string name="other_wallets">Other Wallets</string>
    <string name="view_wallets">View Wallets</string>
    <string name="hide_wallets">Hide Wallets</string>
    <string name="potential_earning">Potential Earning</string>
    <string name="total">Total</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="completed">Completed</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="accuracy">Accuracy</string>
    <string name="total_annotated_records">Total Annotated\nRecords</string>
    <string name="total_judgments_records">Total Validated\nRecords</string>
    <string name="review_time">Reviewed Time</string>
    <string name="reviewed_records">Reviewed Records</string>
    <string name="detected_objects">Objects Detected</string>
    <string name="approved_records">Approved\nRecords</string>
    <string name="rejected_records">Rejected\nRecords</string>
    <string name="annotated_records">Annotated\nRecords</string>
    <string name="validated_records">Validated\nRecords</string>
    <string name="page_not_found">Page Not Found</string>
    <string name="review_work">Review Work</string>
    <string name="my_workflows">My Workflows</string>
    <string name="you_are_not_the_owner_of_any_work_flow">You are not the owner of any work flow…</string>
    <string name="restricted">Restricted</string>
    <string name="user_details">Subscriber Details</string>
    <string name="payout_amount">Cashout Amount</string>
    <string name="payout_fee">Cashout Fee</string>
    <string name="payout_tds_20">Cashout TDS</string>
    <string name="referral_amount">Referral Amount</string>
    <string name="referral_fee">Referral Fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="referral_tds_20">Referral TDS(20%)</string>
    <string name="total_fee">Total Fee</string>
    <string name="total_tds">Total TDS</string>
    <string name="final_amount">Final Amount</string>
    <string name="deductionNote">*Kindly include your PAN number above for TDS calculation</string>
    <string name="tds_hint_text">*You have violations: 0 out of 0 required.</string>
    <string name="referral_tds_hint_text">*There is 20% TDS deduction on Referral amount because PAN number was not attached to your C3 account at the time of transaction</string>
    <string name="payout_receipt">Payout Receipt</string>
    <string name="bonus_amount">Bonus Amount</string>
    <string name="penalty_amount">Penalty Amount</string>
    <string name="file_has_been_downloaded_successfully">File has been downloaded successfully.</string>
    <string name="no_workflow_step_is_present">No Workflow Step is present…</string>
    <string name="please_wait_fetching_records">Please wait, fetching records.</string>
    <string name="no_more_records">There are no more records to process.</string>
    <string name="points">Points</string>
    <string name="potential">Potential</string>
    <string name="completed_potential">Completed Potential</string>
    <string name="downloading_ai_engine">Setting up AI Engine</string>
    <string name="zero_percent">0%</string>
    <string name="downloading_time_txt">0/0 MB</string>
    <string name="delhi_police">Delhi Police</string>
    <string name="leader">Leader</string>
    <string name="enter_cr_token">Please enter your CR token.</string>
    <string name="hint_cr_token">CR token</string>
    <string name="start_cr">Start CR</string>
</resources>