<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/enter_cr_token"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/action_item" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/crToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/hint_cr_token"
        android:textColorHint="#000"
        android:textColor="#000"
        android:background="@color/action_item"
        android:inputType="text"
        android:padding="20dp"
        android:textSize="16sp">

        <requestFocus />
    </com.google.android.material.textfield.TextInputEditText>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp">

        <TextView
            android:id="@+id/startCR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/action_item"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/start_cr"
            android:textColor="@color/text_dark"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
