<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:elevation="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/downloading_ai_engine"
        android:textColor="@color/text_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:max="100"
            android:progress="0"
            android:progressBackgroundTint="@color/colorPrimaryLight"
            android:progressTint="@color/colorPrimary"
            tools:progress="50" />

        <LinearLayout
            android:id="@+id/progressStatusContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:visibility="visible"
            android:visibility="invisible">

            <TextView
                android:id="@+id/downloadPercentageTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_percent"
                android:textColor="@color/text_dark" />

            <TextView
                android:id="@+id/downloadSizeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloading_time_txt"
                android:textColor="@color/text_dark" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
